Fix awkward spacing of user avatars on staff page. (Fix #6)

--- a/sass/_desktop.scss
+++ b/sass/_desktop.scss
@@ -216,6 +216,7 @@ footer .copyright {
     float: left;
     display: flex;
     align-items: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     flex-direction: row;
     padding: rhythm() 0;
